--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Android User Communications</string>
-    <string name="snackbar_str">This is a Snackbar</string>
+<!--    <string name="snackbar_str">This is a Snackbar</string>-->
     <string name="ToastActivity">Toast Messages</string>
     <string name="DialogActivity">Dialogs</string>
     <string name="SnackbarActivity">Snackbar Messages</string>
